--- a/Ergasia1/about-us.html
+++ b/Ergasia1/about-us.html
@@ -11,26 +11,43 @@
 
         <header>
             <h1> MyOnlineShop.gr</h1>
+
+            <nav id="menu">
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="product-categories.html">Product Categories</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="tech-support.html">Tech Support</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <nav class="menu">
-            <ul>
-              <li><a href="index.html">Home</a></li><br>
-              <li><a href="product-categories.html">Product Categories</a></li><br>
-              <li><a href="about-us.html">About Us</a></li><br>
-              <li><a href="tech-support.html">Tech Support</a></li><br>
-            </ul>
-        </nav>
 
-        <a href="#">
-            <img src="img/3190180.png" class="prof_img" title="Christos Rousas" alt="Christos Rousas">
-        </a><br>
-        <p>Christos Rousas</p>
+        <main>
+
+            <a href="#">
+                <img src="img/3190180.png" class="prof_img" title="Christos Rousas" alt="Christos Rousas">
+            </a><br>
+            <p>Christos Rousas</p>
+            
+            <a href="#">
+                <img src="img/3190114.png" class="prof_img" title="Ioannis Mastrogiannis" alt="Ioannis Mastrogiannis"> 
+            </a><br>
+            <p>Ioannis Mastrogiannis</p>
+
+        </main>
+
         
-        <a href="#">
-            <img src="img/3190114.png" class="prof_img" title="Ioannis Mastrogiannis" alt="Ioannis Mastrogiannis"> 
-        </a><br>
-        <p>Ioannis Mastrogiannis</p>
+        <footer>
+            <!--<section class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            -->
+            <ul class="footer-list">
+                <li class="footer-list-item"><a href="#">Facebook</a></li>
+                <li class="footer-list-item"><a href="#">Instagram</a></li>
+                <li class="footer-list-item"><a href="#">E-mail</a></li>
+            </ul>
+            <p class="copyright">MyOnlineShop © 2022</p>
+        </footer>
 
     </body>
 </html>
