--- a/Ergasia1/index.html
+++ b/Ergasia1/index.html
@@ -11,19 +11,36 @@
 
         <header>
             <h1> MyOnlineShop.gr</h1>
+
+            <nav id="menu">
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="product-categories.html">Product Categories</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="tech-support.html">Tech Support</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <nav class="menu">
-            <ul>
-              <li><a href="index.html">Home</a></li><br>
-              <li><a href="product-categories.html">Product Categories</a></li><br>
-              <li><a href="about-us.html">About Us</a></li><br>
-              <li><a href="tech-support.html">Tech Support</a></li><br>
-            </ul>
-        </nav>
 
-        <h2>What is this?</h2>
-        <p>This is the main page of our online shop, MyOnlineShop!</p>
+        <main>
+
+            <h2>What is this?</h2>
+            <p>This is the main page of our online shop, MyOnlineShop!</p>
+        
+        </main>
+
+
+        <footer>
+            <!--<section class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            -->
+            <ul class="footer-list">
+                <li class="footer-list-item"><a href="#">Facebook</a></li>
+                <li class="footer-list-item"><a href="#">Instagram</a></li>
+                <li class="footer-list-item"><a href="#">E-mail</a></li>
+            </ul>
+            <p class="copyright">MyOnlineShop © 2022</p>
+        </footer>
 
     </body>
 </html>
