Logo, new name, footer links, text, article/section and more

--- a/Ergasia1/index.html
+++ b/Ergasia1/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="el">
     <head>
-        <title>Main Page</title>
+        <title>Αρχική Σελίδα | Take A Byte | Computers and Tech</title>
 
-        <meta charset="UTF8">
+        <meta charset="UTF-8">
+        <meta name="description" content="Take A Byte | Computers and Tech">
+        <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
 
     <body>
 
-        <header>
-            <h1> MyOnlineShop.gr</h1>
+        <header class="site-header">
+            <h1>Take A Byte | Computers and Tech</h1>
+            <img src="../img/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
-            <nav id="menu">
+            <nav id="top-menu">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="product-categories.html">Product Categories</a></li>
-                  <li><a href="about-us.html">About Us</a></li>
-                  <li><a href="tech-support.html">Tech Support</a></li>
+                  <li><a href="index.html">Αρχική Σελίδα</a></li>
+                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                  <li><a href="about-us.html">Ποιοί είμαστε</a></li>
+                  <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,21 +29,25 @@
 
         <main>
 
-            <h2>What is this?</h2>
-            <p>This is the main page of our online shop, MyOnlineShop!</p>
+            <h2>Καλως ήρθατε στην ιστοσελίδα του ηλεκτρονικού μας καταστήματος, Take A Byte!</h2>
+            <p>Στο κατάστημά μας μπορείτε να βρείτε όλα τα είδη τεχνολογίας που χρειάζεστε, από κινητά τηλέφωνα και laptops, μέχρι πλυντήρια και καφετιέρες!</p>
+
+            <h3>Σχετικά με εμάς</h3>
+            <p>Το κατάστημά μας ξεκίνησε να δραστηριοποιείται στον χώρο της τεχνολογίας το 2022. Διαθέτει ευρεία γκάμα προϊόντων τεχνολογίας, 
+                κινητά τηλέφωνα, υπολογιστές και εξαρτήματα, περιφερειακά, οικιακές συσκευές και άλλα.</p>
+            <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
         
         </main>
 
 
-        <footer>
-            <!--<section class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            -->
+        <footer class="site-footer">
+            
             <ul class="footer-list">
-                <li class="footer-list-item"><a href="#">Facebook</a></li>
-                <li class="footer-list-item"><a href="#">Instagram</a></li>
-                <li class="footer-list-item"><a href="#">E-mail</a></li>
+                <li class="footer-list-item"><a href="https://www.facebook.com"><img src="../img/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
+                <li class="footer-list-item"><a href="https://www.instagram.com"><img src="../img/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
+                <li class="footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../img/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
-            <p class="copyright">MyOnlineShop © 2022</p>
+            <p class="copyright">Take A Byte © 2022</p>
         </footer>
 
     </body>
