--- a/Ergasia1/product-categories.html
+++ b/Ergasia1/product-categories.html
@@ -1,108 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="el">
     <head>
-        <title>Product Categories</title>
+        <title>Κατηγορίες Προϊόντων | Take A Byte | Computers and Tech</title>
 
-        <meta charset="UTF8">
+        <meta charset="UTF-8">
+        <meta name="description" content="Take A Byte | Computers and Tech">
+        <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
 
     <body>
 
-        <header>
-            <h1> MyOnlineShop.gr</h1>
+        <header class="site-header">
+            <h1>Take A Byte | Computers and Tech</h1>
+            <img src="../img/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+
+            <nav id="top-menu">
+                <ul>
+                  <li><a href="index.html">Αρχική Σελίδα</a></li>
+                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                  <li><a href="about-us.html">Ποιοί είμαστε</a></li>
+                  <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <nav id="menu">
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="product-categories.html">Product Categories</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="tech-support.html">Tech Support</a></li>
-            </ul>
-        </nav>
 
         
         <main>
-            <h2>Product Categories</h2>
+            <h2>Κατηγορίες Προϊόντων</h2>
             <ol>
-                <li><img src ="img/pc.jpg" width="200" height="200">  <br>
-                    PCs and External Devices
+                <li><img src ="../img/pc.jpg" width="200" height="200">  <br>
+                    Η/Υ και Περιφερειακές Συσκευές
                     <ul>
-                        <li> Computer towers </li>
-                        <li> Keyboards </li>
-                        <li> Mouses </li>
-                        <li> Monitors </li>
-                        <li> External Storage Units </li>
+                        <li> Κουτιά Υπολογιστών </li>
+                        <li> Πληκτρολόγια </li>
+                        <li> Ποντίκια </li>
+                        <li> Οθόνες </li>
+                        <li> Εξωτερικές Μονάδες Αποθήκευσης </li>
                         <li><a href="products-laptops.html"> Laptops </a></li>
                     </ul>
                 </li>
-                <li><img src ="img/upgrade.jpg" width="200" height="200">  <br> 
-                    Upgrades 
+                <li><img src ="../img/upgrade.jpg" width="200" height="200">  <br> 
+                    Αναβαθμίσεις
                     <ul>
-                        <li> Hard Drives </li>
-                        <li><a href="products-graphics_cards.html"> Graphics Cards </a></li>
+                        <li> Σκληροί δίσκοι </li>
+                        <li><a href="products-graphics_cards.html"> Κάρτες Γραφικών </a></li>
                         <li> Modding and Cooling </li>
-                        <li> RAM Memory </li>
-                        <li> Motherboards </li>
-                        <li> CPUs </li>
+                        <li> Μνήμες RAM </li>
+                        <li> Μητρικές Κάρτες </li>
+                        <li> Επεξεργαστές </li>
                     </ul>
                 </li>
-                <li> <img src ="img/network.jpg" width="200" height="200">  <br> 
+                <li> <img src ="../img/network.jpg" width="200" height="200">  <br> 
                     Network 
                     <ul>
                         <li> Routers </li>
-                        <li> Network Cables </li>
+                        <li> Καλώδια Δικτύου </li>
                         <li> Wifi Extenders </li>
                         <li> Switches </li>
-                        <li> Network Cards </li>
+                        <li> Κάρτες Δικτύου </li>
                         <li> File Servers </li>
                     </ul>
                 </li>
-                <li> <img src ="img/phone.jpg" width="200" height="200">  <br> 
-                    Phones and Tablets
+                <li> <img src ="../img/phone.jpg" width="200" height="200">  <br> 
+                    Κινητά Τηλέφωνα και Tablets
                     <ul>
-                        <li> Phones </li>
+                        <li> Κινητά Τηλέφωνα </li>
                         <li> Tablets </li>
-                        <li> Phone Accessories </li>
-                        <li> Tablet Accessories </li>
-                        <li> Prepaid Cards </li>
-                        <li> Mobile Phone Spare Parts </li>
+                        <li> Αξεσουάρ Κινητών </li>
+                        <li> Αξεσουάρ Tablet </li>
+                        <li> Προπληρωμένες Κάρτες </li>
+                        <li> Ανταλλακτικά Κινητών </li>
                     </ul>
                 </li>
-                <li> <img src ="img/tv.jpg" width="200" height="200">  <br> 
-                    TVs and Accessories
+                <li> <img src ="../img/tv.jpg" width="200" height="200">  <br> 
+                    Τηλεοράσεις και Αξεσουάρ
                     <ul>
-                        <li> TVs </li>
-                        <li> TV Stands </li>
-                        <li> TV Remote Controls</li>
-                        <li> TV Accessories</li>
+                        <li> Τηλεοράσεις </li>
+                        <li> Βάσεις Τηλεοράσεων </li>
+                        <li> Τηλεχειριστήρια Τηλεόρασης</li>
+                        <li> Αξεσουάρ TV</li>
                     </ul>
                 </li>
-                <li> <img src ="img/house.jpg" width="200" height="200">  <br> 
-                    Household Appliances 
+                <li> <img src ="../img/house.jpg" width="200" height="200">  <br> 
+                    Οικιακές Συσκευές 
                     <ul>
-                        <li> Heating and Air Conditioning </li>
-                        <li> White Household Appliances  </li>
-                        <li> Cleaning Devices </li>
-                        <li> Cooking Devices </li>
-                        <li> Coffee Makers  </li>
-                        <li> Food Processing Equipment</li>
+                        <li> Θέρμανση & Κλιματισμός </li>
+                        <li> Λευκές Οικιακές Συσκευές </li>
+                        <li> Συσκευές Καθαρισμού </li>
+                        <li> Συσκευές Μαγειρέματος </li>
+                        <li> Καφετιέρες </li>
+                        <li> Συσκευές Επεξεργασίας Τροφίμων </li>
                     </ul>
                 </li>
             </ol>
         </main>
 
 
-        <footer>
-            <!--<section class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            -->
+        <footer class="site-footer">
+            
             <ul class="footer-list">
-                <li class="footer-list-item"><a href="#">Facebook</a></li>
-                <li class="footer-list-item"><a href="#">Instagram</a></li>
-                <li class="footer-list-item"><a href="#">E-mail</a></li>
+                <li class="footer-list-item"><a href="https://www.facebook.com"><img src="../img/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
+                <li class="footer-list-item"><a href="https://www.instagram.com"><img src="../img/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
+                <li class="footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../img/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
-            <p class="copyright">MyOnlineShop © 2022</p>
+            <p class="copyright">Take A Byte © 2022</p>
         </footer>
 
     </body>
