--- a/Ergasia1/tech-support.html
+++ b/Ergasia1/tech-support.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="el">
     <head>
-        <title>Tech Support</title>
+        <title>Τεχνική Υποστήριξη | Take A Byte | Computers and Tech</title>
 
-        <meta charset="UTF8">
+        <meta charset="UTF-8">
+        <meta name="description" content="Take A Byte | Computers and Tech">
+        <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
 
     <body>
 
-        <header>
-            <h1> MyOnlineShop.gr</h1>
+        <header class="site-header">
+            <h1>Take A Byte | Computers and Tech</h1>
+            <img src="../img/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
-            <nav id="menu">
+            <nav id="top-menu">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="product-categories.html">Product Categories</a></li>
-                  <li><a href="about-us.html">About Us</a></li>
-                  <li><a href="tech-support.html">Tech Support</a></li>
+                  <li><a href="index.html">Αρχική Σελίδα</a></li>
+                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                  <li><a href="about-us.html">Ποιοί είμαστε</a></li>
+                  <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
                 </ul>
             </nav>
         </header>
@@ -29,43 +33,43 @@
             <form>
 
                 <fieldset>
-                    <legend>Στοιχεία Επικοινωνίας</legend><br>
+                    <legend>Στοιχεία Επικοινωνίας</legend>
                     <label for="txt_name">Όνοματεπώνυμο
-                        <input type="text" id="txt_name" name="name" autocomplete="name"></label><br><br>
+                        <input type="text" id="txt_name" name="name" autocomplete="name"></label>
                     <label for="txt_email">E-mail 
-                        <input type="email" id="txt_email" name="email" autocomplete="email" placeholder="you@example.com"></label><br><br>
+                        <input type="email" id="txt_email" name="email" autocomplete="email" placeholder="you@example.com"></label>
                     <label for="number_phone">Τηλέφωνο 
-                        <input type="tel" id="number_phone" name="phoneNumber" autocomplete="tel"></label><br><br>
-                </fieldset><br>
+                        <input type="tel" id="number_phone" name="phoneNumber" autocomplete="tel"></label>
+                </fieldset>
 
                 <fieldset>
-                    <legend>Στοιχεία Αγοράς</legend><br>
+                    <legend>Στοιχεία Αγοράς</legend>
                     <label for="txt_product_no">Κωδικός Προϊόντος 
-                        <input type="text" id="txt_product_no" name="productNo"></label><br><br>
+                        <input type="txt" id="txt_product_no" name="productNo" min="010101" max="999999"></label>
                     <label for="date_purchase">Ημερομηνία Αγοράς 
-                        <input type="date" id="date_purchase" name="purchaseDate"></label><br><br>
+                        <input type="date" id="date_purchase" name="purchaseDate"></label>
                     <label for="file_receipt">Απόδειξη
-                        <input type="file" id="file_receipt" name="receipt"></label><br><br>
+                        <input type="file" id="file_receipt" name="receipt"></label>
                     <label for="txt_description">Περιγραφή του Προβλήματος 
-                        <textarea id="txt_description" name="description" cols="50" rows="8" autocomplete="on"></textarea></label><br><br>
-                </fieldset><br>
+                        <textarea id="txt_description" name="description" cols="50" rows="8" autocomplete="on"></textarea></label>
+                </fieldset>
 
-                <input type="button" id="submit_form_button" value="Υποβολή"><br><br>
-
+                <input type="reset" id="reset_form_button" value="Επαναφορά">
+                <input type="button" id="submit_form_button" value="Υποβολή">
+                
             </form>
 
         </main>
 
 
-        <footer>
-            <!--<section class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            -->
+        <footer class="site-footer">
+            
             <ul class="footer-list">
-                <li class="footer-list-item"><a href="#">Facebook</a></li>
-                <li class="footer-list-item"><a href="#">Instagram</a></li>
-                <li class="footer-list-item"><a href="#">E-mail</a></li>
+                <li class="footer-list-item"><a href="https://www.facebook.com"><img src="../img/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
+                <li class="footer-list-item"><a href="https://www.instagram.com"><img src="../img/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
+                <li class="footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../img/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
-            <p class="copyright">MyOnlineShop © 2022</p>
+            <p class="copyright">Take A Byte © 2022</p>
         </footer>
 
     </body>
