started css style/flex and some html changes

--- a/Ergasia2/index.html
+++ b/Ergasia2/index.html
@@ -31,7 +31,7 @@
 
         <main>
 
-            <h2>Καλως ήρθατε στην ιστοσελίδα του ηλεκτρονικού μας καταστήματος, Take A Byte!</h2>
+            <h2>Καλώς ήρθατε στην ιστοσελίδα του ηλεκτρονικού μας καταστήματος, Take A Byte!</h2>
             <p>Στο κατάστημά μας μπορείτε να βρείτε όλα τα είδη τεχνολογίας που χρειάζεστε, από κινητά τηλέφωνα και laptops, μέχρι πλυντήρια και καφετιέρες!</p>
 
             <h3>Σχετικά με εμάς</h3>
