--- a/Ergasia2/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ergasia2/product-Gigabyte_GeForce_GTX_1660.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
 
-            <nav id="navigation">
+            <nav class="navigation">
                 <ol>
                     <li><a href="product-categories.html">Προϊόντα</a></li>
                     <li><a href="products-graphics_cards.html">Κάρτες Γραφικών</a></li>
