--- a/Ergasia1/product-Dell_Vostro_3500.html
+++ b/Ergasia1/product-Dell_Vostro_3500.html
@@ -8,15 +8,17 @@
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="style.css">
+
     </head>
 
     <body>
 
         <header class="site-header">
             <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../img/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
-            <nav id="top-menu">
+            <nav class="top-menu">
                 <ul>
                   <li><a href="index.html">Αρχική Σελίδα</a></li>
                   <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
@@ -39,7 +41,7 @@
         <main>
 
             <section class="product-info">
-                <img src = "../img/laptop1.jpg" width="230" height="150">
+                <img src = "../assets/laptop1.jpg" width="230" height="150">
                 <p>
                     Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard) <br>
                     Κωδικός Προϊόντος: 010601  <br>
@@ -215,11 +217,10 @@
 
 
         <footer class="site-footer">
-            
-            <ul class="footer-list">
-                <li class="footer-list-item"><a href="https://www.facebook.com"><img src="../img/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                <li class="footer-list-item"><a href="https://www.instagram.com"><img src="../img/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../img/email-logo.png" alt="Email" width="100" height="100"></a></li>
+            <ul class="site-footer-list">
+                <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
             <p class="copyright">Take A Byte © 2022</p>
         </footer>
