--- a/Ergasia1/product-categories.html
+++ b/Ergasia1/product-categories.html
@@ -8,15 +8,17 @@
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="style.css">
+
     </head>
 
     <body>
 
         <header class="site-header">
             <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../img/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
-            <nav id="top-menu">
+            <nav class="top-menu">
                 <ul>
                   <li><a href="index.html">Αρχική Σελίδα</a></li>
                   <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
@@ -31,7 +33,7 @@
         <main>
             <h2>Κατηγορίες Προϊόντων</h2>
             <ol>
-                <li><img src ="../img/pc.jpg" width="200" height="200">  <br>
+                <li><img src ="../assets/pc.jpg" width="200" height="200">  <br>
                     Η/Υ και Περιφερειακές Συσκευές
                     <ul>
                         <li> Κουτιά Υπολογιστών </li>
@@ -42,7 +44,7 @@
                         <li><a href="products-laptops.html"> Laptops </a></li>
                     </ul>
                 </li>
-                <li><img src ="../img/upgrade.jpg" width="200" height="200">  <br> 
+                <li><img src ="../assets/upgrade.jpg" width="200" height="200">  <br> 
                     Αναβαθμίσεις
                     <ul>
                         <li> Σκληροί δίσκοι </li>
@@ -53,7 +55,7 @@
                         <li> Επεξεργαστές </li>
                     </ul>
                 </li>
-                <li> <img src ="../img/network.jpg" width="200" height="200">  <br> 
+                <li> <img src ="../assets/network.jpg" width="200" height="200">  <br> 
                     Network 
                     <ul>
                         <li> Routers </li>
@@ -64,7 +66,7 @@
                         <li> File Servers </li>
                     </ul>
                 </li>
-                <li> <img src ="../img/phone.jpg" width="200" height="200">  <br> 
+                <li> <img src ="../assets/phone.jpg" width="200" height="200">  <br> 
                     Κινητά Τηλέφωνα και Tablets
                     <ul>
                         <li> Κινητά Τηλέφωνα </li>
@@ -75,7 +77,7 @@
                         <li> Ανταλλακτικά Κινητών </li>
                     </ul>
                 </li>
-                <li> <img src ="../img/tv.jpg" width="200" height="200">  <br> 
+                <li> <img src ="../assets/tv.jpg" width="200" height="200">  <br> 
                     Τηλεοράσεις και Αξεσουάρ
                     <ul>
                         <li> Τηλεοράσεις </li>
@@ -84,7 +86,7 @@
                         <li> Αξεσουάρ TV</li>
                     </ul>
                 </li>
-                <li> <img src ="../img/house.jpg" width="200" height="200">  <br> 
+                <li> <img src ="../assets/house.jpg" width="200" height="200">  <br> 
                     Οικιακές Συσκευές 
                     <ul>
                         <li> Θέρμανση & Κλιματισμός </li>
@@ -100,11 +102,10 @@
 
 
         <footer class="site-footer">
-            
-            <ul class="footer-list">
-                <li class="footer-list-item"><a href="https://www.facebook.com"><img src="../img/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                <li class="footer-list-item"><a href="https://www.instagram.com"><img src="../img/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../img/email-logo.png" alt="Email" width="100" height="100"></a></li>
+            <ul class="site-footer-list">
+                <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
             <p class="copyright">Take A Byte © 2022</p>
         </footer>
