--- a/Ergasia1/products-graphics_cards.html
+++ b/Ergasia1/products-graphics_cards.html
@@ -8,15 +8,17 @@
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="style.css">
+
     </head>
 
     <body>
 
         <header class="site-header">
             <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../img/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
             <img>
-            <nav id="top-menu">
+            <nav class="top-menu">
                 <ul>
                   <li><a href="index.html">Αρχική Σελίδα</a></li>
                   <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
@@ -41,7 +43,7 @@
             <dl>
                 <article class="product-item">
                     <dt>
-                        <a href="product-Gigabyte_GeForce_GTX_1660.html"><img src="../img/gr1.jpeg" width="230" height="190"></a> <br>
+                        <a href="product-Gigabyte_GeForce_GTX_1660.html"><img src="../assets/gr1.jpeg" width="230" height="190"></a> <br>
                         <strong><a href="product-Gigabyte_GeForce_GTX_1660.html"> Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort </a></strong><br>
                         Κωδικός Προϊόντος: 020201 <br>
                         Τιμή:272,12 € Βαθμολογία: 4,8/5 <br>
@@ -52,7 +54,7 @@
                     <hr>
                 <article class="product-item">
                     <dt>
-                        <img src="../img/gr2.jpeg" width="230" height="190"> <br>
+                        <img src="../assets/gr2.jpeg" width="230" height="190"> <br>
                         <strong> MSI GeForce GTX 1660 Super 6GB GDDR6 Ventus XS OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</strong><br>
                         Κωδικός Προϊόντος: 020202 <br>
                         Τιμή:282,54 € Βαθμολογία: 4,7/5 <br>
@@ -64,7 +66,7 @@
                         <hr>
                 <article class="product-item">
                     <dt>
-                        <img src="../img/gr3.jpeg" width="230" height="190"> <br>
+                        <img src="../assets/gr3.jpeg" width="230" height="190"> <br>
                         <strong> MSI GeForce GTX 1660 Super 6GB GDDR6 Gaming X Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort </strong><br>
                         Κωδικός Προϊόντος: 020203 <br>
                         Τιμή:345,00 € Βαθμολογία: 4,9/5 <br>
@@ -77,7 +79,7 @@
                         <hr>
                 <article class="product-item">
                     <dt>
-                        <img src="../img/gr4.jpeg" width="230" height="190"> <br>
+                        <img src="../assets/gr4.jpeg" width="230" height="190"> <br>
                         <strong> Gigabyte GeForce GTX 1660 Super 6GB GDDR6 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort </strong><br>
                         Κωδικός Προϊόντος: 020204 <br>
                         Τιμή:336,00 € Βαθμολογία: 4,8/5 <br>
@@ -88,7 +90,7 @@
                     <hr>
                 <article class="product-item">
                     <dt>
-                        <img src="../img/gr5.jpeg" width="230" height="190"> <br>
+                        <img src="../assets/gr5.jpeg" width="230" height="190"> <br>
                         <strong> Gigabyte GeForce GTX 1650 4GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με 2 HDMI και DisplayPort </strong><br>
                         Κωδικός Προϊόντος: 020205 <br>
                         Τιμή:198,31 € Βαθμολογία: 4,8/5 <br>
@@ -105,11 +107,10 @@
 
 
         <footer class="site-footer">
-            
-            <ul class="footer-list">
-                <li class="footer-list-item"><a href="https://www.facebook.com"><img src="../img/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                <li class="footer-list-item"><a href="https://www.instagram.com"><img src="../img/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../img/email-logo.png" alt="Email" width="100" height="100"></a></li>
+            <ul class="site-footer-list">
+                <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
             <p class="copyright">Take A Byte © 2022</p>
         </footer>
