--- a/Ergasia1/products-laptops.html
+++ b/Ergasia1/products-laptops.html
@@ -8,15 +8,17 @@
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="style.css">
+
     </head>
 
     <body>
 
         <header class="site-header">
             <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../img/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
-            <nav id="top-menu">
+            <nav class="top-menu">
                 <ul>
                   <li><a href="index.html">Αρχική Σελίδα</a></li>
                   <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
@@ -41,7 +43,7 @@
             <dl>
                 <article class="product-item">
                     <dt>
-                        <a href="product-Dell_Vostro_3500.html"><img src="../img/laptop1.jpg" width="230" height="150"></a> <br>
+                        <a href="product-Dell_Vostro_3500.html"><img src="../assets/laptop1.jpg" width="230" height="150"></a> <br>
                         <strong><a href="product-Dell_Vostro_3500.html"> Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard) </a></strong><br>
                         Κωδικός Προϊόντος: 010601 <br>
                         Τιμή:500€ Βαθμολογία: 3/5 <br>
@@ -52,7 +54,7 @@
                     <hr>
                 <article class="product-item">
                     <dt>
-                        <img src="../img/laptop2.jpg" width="230" height="150"> <br>
+                        <img src="../assets/laptop2.jpg" width="230" height="150"> <br>
                         <strong> HP 255 G8 15.6" FHD (Athlon-3150U/4GB/128GB SSD/W10 Pro) (US Keyboard)</strong><br>
                         Κωδικός Προϊόντος: 010602 <br>
                         Τιμή:500 € Βαθμολογία: 3/5 <br>
@@ -63,7 +65,7 @@
                     <hr>
                 <article class="product-item">
                     <dt>
-                        <img src="../img/laptop3.jpg" width="230" height="150"> <br>
+                        <img src="../assets/laptop3.jpg" width="230" height="150"> <br>
                         <strong> Apple MacBook Air 13.3" (2020) IPS Retina Display (M1/8GB/256GB SSD) Space Gray (GR Keyboard) </strong><br>
                         Κωδικός Προϊόντος: 010603 <br>
                         Τιμή:1.265,00 € Βαθμολογία: 3/5 <br>
@@ -75,7 +77,7 @@
                     <hr>
                 <article class="product-item">
                     <dt>
-                        <img src="../img/laptop4.jpg" width="230" height="150"> <br>
+                        <img src="../assets/laptop4.jpg" width="230" height="150"> <br>
                         <strong> Apple MacBook Air 13.3" (2020) IPS Retina Display (M1/8GB/256GB SSD) Gold (GR Keyboard) </strong><br>
                         Κωδικός Προϊόντος: 010604 <br>
                         Τιμή:1.195,00 € Βαθμολογία: 3/5 <br>
@@ -87,7 +89,7 @@
                     <hr>
                 <article class="product-item">
                     <dt>
-                        <img src="../img/laptop5.jpg" width="230" height="150"> <br>
+                        <img src="../assets/laptop5.jpg" width="230" height="150"> <br>
                         <strong> Lenovo V15 G2 ALC 15.6" FHD (Ryzen 5-5500U/8GB/256GB SSD/No OS) Black (GR Keyboard) </strong><br>
                         Κωδικός Προϊόντος: 010605 <br>
                         Τιμή:500€ Βαθμολογία: 3/5 <br>
@@ -104,11 +106,10 @@
 
 
         <footer class="site-footer">
-            
-            <ul class="footer-list">
-                <li class="footer-list-item"><a href="https://www.facebook.com"><img src="../img/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                <li class="footer-list-item"><a href="https://www.instagram.com"><img src="../img/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../img/email-logo.png" alt="Email" width="100" height="100"></a></li>
+            <ul class="site-footer-list">
+                <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
             <p class="copyright">Take A Byte © 2022</p>
         </footer>
