added header bg, products flex box, and polished overall style

--- a/Ergasia2/about-us.html
+++ b/Ergasia2/about-us.html
@@ -15,23 +15,24 @@
     <body>
 
         <header class="site-header">
-            <h1>Take A Byte | Computers and Tech</h1>
-            <a href="">
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
-            </a>
-
-            <nav class="top-menu">
-                <ul>
-                  <li><a href="index.html">Αρχική Σελίδα</a></li>
-                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
-                  <li><a href="about-us.html">Ποιοί είμαστε</a></li>
-                  <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
-                </ul>
-            </nav>
+            <section class="header-content">
+                <h1>Take A Byte | Computers and Tech</h1>
+                <a href="">
+                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                </a>
+                <nav class="top-menu">
+                    <ul>
+                      <li><a href="index.html">Αρχική Σελίδα</a></li>
+                      <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                      <li><a href="about-us.html">Ποιοί είμαστε</a></li>
+                      <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
+                    </ul>
+                </nav>
+            </section>
         </header>
 
 
-        <main>
+        <main class="about-us-text">
 
             <a href="https://www.linkedin.com/in/christos-rousas-5a39aa253/">
                 <h3>Χρήστος Ρούσας</h3>
