--- a/Ergasia2/product-Dell_Vostro_3500.html
+++ b/Ergasia2/product-Dell_Vostro_3500.html
@@ -15,25 +15,25 @@
     <body>
 
         <header class="site-header">
-            <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
-
-            <nav class="top-menu">
-                <ul>
-                  <li><a href="index.html">Αρχική Σελίδα</a></li>
-                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
-                  <li><a href="about-us.html">Ποιοί είμαστε</a></li>
-                  <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
-                </ul>
-            </nav>
-
-            <nav class="navigation">
-                <ol>
-                    <li><a href="product-categories.html">Προϊόντα</a></li>
-                    <li><a href="products-laptops.html">Laptops</a></li>
-                    <li>Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard)</li>
-                </ol>
-            </nav>
+            <section class="header-content">
+                <h1>Take A Byte | Computers and Tech</h1>
+                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                <nav class="top-menu">
+                    <ul>
+                      <li><a href="index.html">Αρχική Σελίδα</a></li>
+                      <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                      <li><a href="about-us.html">Ποιοί είμαστε</a></li>
+                      <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
+                    </ul>
+                </nav>
+                <nav class="navigation">
+                    <ol>
+                        <li><a href="product-categories.html">Προϊόντα</a></li>
+                        <li><a href="products-laptops.html">Laptops</a></li>
+                        <li>Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard)</li>
+                    </ol>
+                </nav>
+            </section>
         </header>
 
 
