--- a/Ergasia2/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ergasia2/product-Gigabyte_GeForce_GTX_1660.html
@@ -15,25 +15,25 @@
     <body>
 
         <header class="site-header">
-            <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
-
-            <nav class="top-menu">
-                <ul>
-                  <li><a href="index.html">Αρχική Σελίδα</a></li>
-                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
-                  <li><a href="about-us.html">Ποιοί είμαστε</a></li>
-                  <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
-                </ul>
-            </nav>
-
-            <nav class="navigation">
-                <ol>
-                    <li><a href="product-categories.html">Προϊόντα</a></li>
-                    <li><a href="products-graphics_cards.html">Κάρτες Γραφικών</a></li>
-                    <li>Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</li>
-                </ol>
-            </nav>
+            <section class="header-content">
+                <h1>Take A Byte | Computers and Tech</h1>
+                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                <nav class="top-menu">
+                    <ul>
+                      <li><a href="index.html">Αρχική Σελίδα</a></li>
+                      <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                      <li><a href="about-us.html">Ποιοί είμαστε</a></li>
+                      <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
+                    </ul>
+                </nav>
+                <nav class="navigation">
+                    <ol>
+                        <li><a href="product-categories.html">Προϊόντα</a></li>
+                        <li><a href="products-graphics_cards.html">Κάρτες Γραφικών</a></li>
+                        <li>Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</li>
+                    </ol>
+                </nav>
+            </section>
         </header>
 
 
