--- a/Ergasia2/product-categories.html
+++ b/Ergasia2/product-categories.html
@@ -15,17 +15,18 @@
     <body>
 
         <header class="site-header">
-            <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
-
-            <nav class="top-menu">
-                <ul>
-                  <li><a href="index.html">Αρχική Σελίδα</a></li>
-                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
-                  <li><a href="about-us.html">Ποιοί είμαστε</a></li>
-                  <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
-                </ul>
-            </nav>
+            <section class="header-content">
+                <h1>Take A Byte | Computers and Tech</h1>
+                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                <nav class="top-menu">
+                    <ul>
+                      <li><a href="index.html">Αρχική Σελίδα</a></li>
+                      <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                      <li><a href="about-us.html">Ποιοί είμαστε</a></li>
+                      <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
+                    </ul>
+                </nav>
+            </section>
         </header>
 
 
@@ -35,7 +36,7 @@
                 <h2>Κατηγορίες Προϊόντων</h2>
                 <ol id="category-list">
                     <section class="product-category">
-                        <li><img src ="../assets/pc.jpg" width="200" height="200">  <br>
+                        <li><img src ="../assets/pc.jpg">  <br>
                             <h3>Η/Υ και Περιφερειακές Συσκευές</h3>
                             <ul>
                                 <li> Κουτιά Υπολογιστών </li>
@@ -48,7 +49,7 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li><img src ="../assets/upgrade.jpg" width="200" height="200">  <br>
+                        <li><img src ="../assets/upgrade.jpg">  <br>
                             <h3>Αναβαθμίσεις</h3>
                             <ul>
                                 <li> Σκληροί δίσκοι </li>
@@ -61,7 +62,7 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/network.jpg" width="200" height="200">  <br>
+                        <li> <img src ="../assets/network.jpg">  <br>
                             <h3>Network</h3>
                             <ul>
                                 <li> Routers </li>
@@ -74,7 +75,7 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/phone.jpg" width="200" height="200">  <br>
+                        <li> <img src ="../assets/phone.jpg">  <br>
                             <h3>Κινητά Τηλέφωνα και Tablets</h3>
                             <ul>
                                 <li> Κινητά Τηλέφωνα </li>
@@ -87,7 +88,7 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/tv.jpg" width="200" height="200">  <br>
+                        <li> <img src ="../assets/tv.jpg">  <br>
                             <h3>Τηλεοράσεις και Αξεσουάρ</h3>
                             <ul>
                                 <li> Τηλεοράσεις </li>
@@ -98,7 +99,7 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/house.jpg" width="200" height="200">  <br>
+                        <li> <img src ="../assets/house.jpg">  <br>
                             <h3>Οικιακές Συσκευές</h3>
                             <ul>
                                 <li> Θέρμανση & Κλιματισμός </li>
