--- a/Ergasia2/tech-support.html
+++ b/Ergasia2/tech-support.html
@@ -15,17 +15,18 @@
     <body>
 
         <header class="site-header">
-            <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
-
-            <nav class="top-menu">
-                <ul>
-                  <li><a href="index.html">Αρχική Σελίδα</a></li>
-                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
-                  <li><a href="about-us.html">Ποιοί είμαστε</a></li>
-                  <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
-                </ul>
-            </nav>
+            <section class="header-content">
+                <h1>Take A Byte | Computers and Tech</h1>
+                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                <nav class="top-menu">
+                    <ul>
+                      <li><a href="index.html">Αρχική Σελίδα</a></li>
+                      <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                      <li><a href="about-us.html">Ποιοί είμαστε</a></li>
+                      <li><a href="tech-support.html">Τεχνική Υποστήριξη</a></li>
+                    </ul>
+                </nav>
+            </section>
         </header>
 
         
