finished ask2 css style and started ask3 flex

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </header>
         <main>
             <ol>
-                <li><a href="Ergasia1/index.html">Άσκηση 1</a></li>
-                <li><a href="Ergasia2/index.html">Άσκηση 2</a></li>
-                <li><a href="Ergasia3/index.html">Άσκηση 3</a></li>
-                <li><a href="Ergasia4/index.html">Άσκηση 4</a></li>
-                <li><a href="Ergasia5/index.html">Άσκηση 5</a></li>
+                <li><a href="Ask1/index.html">Άσκηση 1</a></li>
+                <li><a href="Ask2/index.html">Άσκηση 2</a></li>
+                <li><a href="Ask3/index.html">Άσκηση 3</a></li>
+                <li><a href="Ask4/index.html">Άσκηση 4</a></li>
+                <li><a href="Ask5/index.html">Άσκηση 5</a></li>
             </ol>
         </main>
         <footer>
