--- a/Ask2/index.html
+++ b/Ask2/index.html
@@ -17,7 +17,7 @@
         <header class="site-header">
             <section class="header-content">
                 <h1>Take A Byte | Computers and Tech</h1>
-                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                <img src="../assets/logo2.png" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
                 <nav class="top-menu">
                     <ul>
                       <li><a href="index.html">Αρχική Σελίδα</a></li>
@@ -30,7 +30,7 @@
         </header>
 
 
-        <main class="welcome-text">
+        <main id="welcome-text">
 
             <h2>Καλώς ήρθατε στην ιστοσελίδα του ηλεκτρονικού μας καταστήματος, Take A Byte!</h2>
             <p>Στο κατάστημά μας μπορείτε να βρείτε όλα τα είδη τεχνολογίας που χρειάζεστε, από κινητά τηλέφωνα και laptops, μέχρι πλυντήρια και καφετιέρες!</p>
@@ -47,7 +47,7 @@
             <ul class="site-footer-list">
                 <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
                 <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto:webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
             <p class="copyright">Take A Byte © 2022</p>
         </footer>
