--- a/Ask2/product-categories.html
+++ b/Ask2/product-categories.html
@@ -17,7 +17,7 @@
         <header class="site-header">
             <section class="header-content">
                 <h1>Take A Byte | Computers and Tech</h1>
-                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                <img src="../assets/logo2.png" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
                 <nav class="top-menu">
                     <ul>
                       <li><a href="index.html">Αρχική Σελίδα</a></li>
@@ -36,7 +36,8 @@
                 <h2>Κατηγορίες Προϊόντων</h2>
                 <ol id="category-list">
                     <section class="product-category">
-                        <li><img src ="../assets/pc.jpg">  <br>
+                        <li>
+                            <img src ="../assets/pc.jpg">
                             <h3>Η/Υ και Περιφερειακές Συσκευές</h3>
                             <ul>
                                 <li> Κουτιά Υπολογιστών </li>
@@ -44,16 +45,17 @@
                                 <li> Ποντίκια </li>
                                 <li> Οθόνες </li>
                                 <li> Εξωτερικές Μονάδες Αποθήκευσης </li>
-                                <li><a href="products-laptops.html"> Laptops </a></li>
+                                <li class="product-link"><a href="products-laptops.html"> Laptops </a></li>
                             </ul>
                         </li>
                     </section>
                     <section class="product-category">
-                        <li><img src ="../assets/upgrade.jpg">  <br>
+                        <li>
+                            <img src ="../assets/upgrade.jpg">
                             <h3>Αναβαθμίσεις</h3>
                             <ul>
                                 <li> Σκληροί δίσκοι </li>
-                                <li><a href="products-graphics_cards.html"> Κάρτες Γραφικών </a></li>
+                                <li class="product-link"><a href="products-graphics_cards.html"> Κάρτες Γραφικών </a></li>
                                 <li> Modding and Cooling </li>
                                 <li> Μνήμες RAM </li>
                                 <li> Μητρικές Κάρτες </li>
@@ -62,7 +64,8 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/network.jpg">  <br>
+                        <li>
+                            <img src ="../assets/network.jpg">
                             <h3>Network</h3>
                             <ul>
                                 <li> Routers </li>
@@ -75,7 +78,8 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/phone.jpg">  <br>
+                        <li>
+                            <img src ="../assets/phone.jpg">
                             <h3>Κινητά Τηλέφωνα και Tablets</h3>
                             <ul>
                                 <li> Κινητά Τηλέφωνα </li>
@@ -88,7 +92,8 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/tv.jpg">  <br>
+                        <li>
+                            <img src ="../assets/tv.jpg">
                             <h3>Τηλεοράσεις και Αξεσουάρ</h3>
                             <ul>
                                 <li> Τηλεοράσεις </li>
@@ -99,7 +104,7 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/house.jpg">  <br>
+                        <li> <img src ="../assets/house.jpg">
                             <h3>Οικιακές Συσκευές</h3>
                             <ul>
                                 <li> Θέρμανση & Κλιματισμός </li>
@@ -120,7 +125,7 @@
             <ul class="site-footer-list">
                 <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
                 <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto:webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
             <p class="copyright">Take A Byte © 2022</p>
         </footer>
