--- a/Ask2/products-graphics_cards.html
+++ b/Ask2/products-graphics_cards.html
@@ -17,7 +17,7 @@
         <header class="site-header">
             <section  class="header-content">
                 <h1>Take A Byte | Computers and Tech</h1>
-                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                <img src="../assets/logo2.png" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
                 <img>
                 <nav class="top-menu">
                     <ul>
@@ -124,7 +124,7 @@
             <ul class="site-footer-list">
                 <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
                 <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto:webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
             <p class="copyright">Take A Byte © 2022</p>
         </footer>
