--- a/Ask2/products-laptops.html
+++ b/Ask2/products-laptops.html
@@ -17,7 +17,7 @@
         <header class="site-header">
             <section class="header-content">
                 <h1>Take A Byte | Computers and Tech</h1>
-                <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+                <img src="../assets/logo2.png" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
                 <nav class="top-menu">
                     <ul>
                       <li><a href="index.html">Αρχική Σελίδα</a></li>
@@ -45,7 +45,7 @@
                     <article class="product-item">
                         <dt>
                             <a href="product-Dell_Vostro_3500.html"><img src="../assets/laptop1.jpg"></a> 
-                            <h2><a href="product-Dell_Vostro_3500.html"> Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard) </a></h2>
+                            <h2><a href="product-Dell_Vostro_3500.html">Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard)</a></h2>
                             <ul>
                                 <li>Κωδικός Προϊόντος: 010601</li>
                                 <li>Τιμή:500€</li> 
@@ -122,7 +122,7 @@
             <ul class="site-footer-list">
                 <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
                 <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto:webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
             <p class="copyright">Take A Byte © 2022</p>
         </footer>
