style reviews and some grid additions

--- a/Ask1/about-us.html
+++ b/Ask1/about-us.html
@@ -46,8 +46,7 @@
                 <h3>Ιωάννης Μαστρογιάννης</h3>
                 <img src="../assets/3190114.png" width="200px" class="prof_img" title="Ioannis Mastrogiannis" alt="Ioannis Mastrogiannis"> 
             </a><br>
-            <p>Ο Ιωάννης Μαστρογιάννης, συνιδρυτής του Take A Byte, είναι NPC στο Οικονομικό Πανεπιστήμιο Αθηνών, όπου και διανύει το 
-                4ο έτος των σπουδών του στην Πληροφορική. Του αρέσει να τρώει φάπες από τον Αργύρη Αργυρό και να παριστάνει τον DJ.</p>
+            <p>Ο Ιωάννης Μαστρογιάννης, συνιδρυτής του Take A Byte, είναι φοιτητής στο Οικονομικό Πανεπιστήμιο Αθηνών, όπου και διανύει το 4ο έτος των σπουδών του στην Πληροφορική. Θέλει να ασχοληθεί με τα βιντεοπαιχνίδια και τη μουσική.</p>
             
 
         </main>
