--- a/Ask3/product-categories.html
+++ b/Ask3/product-categories.html
@@ -31,7 +31,7 @@
 
 
         
-        <main>
+        <main id="product-categories-main">
             <section id="product-categories">
                 <h2>Κατηγορίες Προϊόντων</h2>
                 <ol id="category-list">
