--- a/Ask3/products-laptops.html
+++ b/Ask3/products-laptops.html
@@ -37,7 +37,7 @@
 
 
         
-        <main>
+        <main class="products-main">
 
             <section class="products">
                 <h1>Laptops</h1>
