--- a/Ask3/products-graphics_cards.html
+++ b/Ask3/products-graphics_cards.html
@@ -38,7 +38,7 @@
 
 
         
-        <main>
+        <main class="products-main">
             
             <section class="products">
                 <h1>Graphics Cards</h1>
