added some grid and flex to most pages and areas

--- a/Ask1/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ask1/product-Gigabyte_GeForce_GTX_1660.html
@@ -41,28 +41,42 @@
         <main>
 
             <section class="product-info">
-                <img src = "../assets/gr1.jpeg" width="230" height="190">
-                <p>
-                    Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort <br>
-                    Κωδικός Προϊόντος: 020201  <br>
-                    Τιμή:272,12 €
-                </p>
+                    <img src = "../assets/gr1.jpeg" width="230" height="190">
+                    <h2>Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</h2>
+                    <ul>
+                        <li>Κωδικός Προϊόντος: 020201</li>
+                        <li>Τιμή: 272,12 €</li>
+                    </ul>
                 
-                <h3> Σύντομη Περιγραφή </h3>
-                <p>Gigabyte GeForce GTX 1660 6GB OC βασίζεται στην αρχιτεκτονική NVIDIA Turing με ενσωματωμένη μνήμη 6GB GDDR5, ταχύτητα επεξεργαστή 1785MHz και σύστημα ψύξης Windforce 2X</p>
-                <h3> Αναλυτική Περιγραφή </h3>
-                <p> Gigabyte GeForce GTX 1660 6GB OC βασίζεται στην αρχιτεκτονική NVIDIA Turing με ενσωματωμένη μνήμη 6GB GDDR5, ταχύτητα επεξεργαστή 1785MHz και σύστημα ψύξης Windforce 2X<br>
-                    <br>
-                    Το σύστημα ψύξης Windforce 2X διαθέτει μοναδικούς ανεμιστήρες λεπίδων 2x90mm, Alternate Spinning, σύνθετο σωλήνα χαλκού άμεσης αφής και λειτουργικότητα ενεργού ανεμιστήρα 3D, παρέχοντας ταυτόχρονα μια αποτελεσματική ικανότητα απαγωγής θερμότητας για υψηλότερη απόδοση σε χαμηλότερες θερμοκρασίες<br>
-                    <br>
-                    Το GIGABYTE "Alternate Spinning" είναι η μόνη λύση που μπορεί να λύσει την ταραχώδη ροή αέρα των γειτονικών ανεμιστήρων. Δεδομένου ότι οι γειτονικοί ανεμιστήρες περιστρέφονται προς την ίδια κατεύθυνση, η κατεύθυνση ροής του αέρα είναι αντίθετη μεταξύ των ανεμιστήρων, γεγονός που θα προκαλέσει ταραχώδη ροή αέρα και θα μειώσει την απόδοση απαγωγής θερμότητας.
-                    <br>
-                    <br>GIGABYTE γυρίζει τους γειτονικούς ανεμιστήρες στην αντίθετη κατεύθυνση, έτσι ώστε η κατεύθυνση ροής αέρα μεταξύ των δύο ανεμιστήρων να είναι η ίδια, μειώνοντας την αναταραχή και αυξάνοντας την πίεση ροής αέρα.<br>
-                    <br>
-                    Το 3D Active Fan παρέχει ημι-παθητική ψύξη και οι ανεμιστήρες θα παραμείνουν εκτός λειτουργίας όταν η GPU βρίσκεται σε παιχνίδι χαμηλού φορτίου ή χαμηλής ισχύος. Επιτρέπει στους παίκτες να απολαμβάνουν το παιχνίδι σε απόλυτη σιωπή όταν το σύστημα λειτουργεί χωρίς φόρτο ή βρίσκεται σε αδράνεια<br>
-                </p>
-                <a href="https://www.nvidia.com/en-gb/"> Manufacturer's site </a>
-            </section>
+                    <h3> Σύντομη Περιγραφή </h3>
+                    <p>Gigabyte GeForce GTX 1660 6GB OC βασίζεται στην αρχιτεκτονική NVIDIA Turing με ενσωματωμένη μνήμη 6GB GDDR5, 
+                        ταχύτητα επεξεργαστή 1785MHz και σύστημα ψύξης Windforce 2X</p>
+                    <h3> Αναλυτική Περιγραφή </h3>
+                    <p> Gigabyte GeForce GTX 1660 6GB OC βασίζεται στην αρχιτεκτονική NVIDIA Turing με ενσωματωμένη μνήμη 6GB GDDR5, ταχύτητα επεξεργαστή 1785MHz 
+                        και σύστημα ψύξης Windforce 2X
+                    </p>
+                    <p>
+                        Το σύστημα ψύξης Windforce 2X διαθέτει μοναδικούς ανεμιστήρες λεπίδων 2x90mm, Alternate Spinning, σύνθετο σωλήνα
+                        χαλκού άμεσης αφής και λειτουργικότητα ενεργού ανεμιστήρα 3D, παρέχοντας ταυτόχρονα μια αποτελεσματική
+                        ικανότητα απαγωγής θερμότητας για υψηλότερη απόδοση σε χαμηλότερες θερμοκρασίες
+                    </p>
+                    <p>
+                        Το GIGABYTE "Alternate Spinning" είναι η μόνη λύση που μπορεί να λύσει την ταραχώδη ροή αέρα των γειτονικών ανεμιστήρων.
+                        Δεδομένου ότι οι γειτονικοί ανεμιστήρες περιστρέφονται προς την ίδια κατεύθυνση, η κατεύθυνση ροής του αέρα είναι αντίθετη
+                        μεταξύ των ανεμιστήρων, γεγονός που θα προκαλέσει ταραχώδη ροή αέρα και θα μειώσει την απόδοση απαγωγής θερμότητας.
+                    </p>
+                    <p>
+                        Η GIGABYTE γυρίζει τους γειτονικούς ανεμιστήρες στην αντίθετη κατεύθυνση, έτσι ώστε η κατεύθυνση ροής αέρα μεταξύ
+                        των δύο ανεμιστήρων να είναι η ίδια, μειώνοντας την αναταραχή και αυξάνοντας την πίεση ροής αέρα.
+                    </p>
+                    <p>
+                        Το 3D Active Fan παρέχει ημι-παθητική ψύξη και οι ανεμιστήρες θα παραμείνουν εκτός λειτουργίας όταν η GPU βρίσκεται
+                        σε παιχνίδι χαμηλού φορτίου ή χαμηλής ισχύος. Επιτρέπει στους παίκτες να απολαμβάνουν το παιχνίδι σε απόλυτη σιωπή
+                        όταν το σύστημα λειτουργεί χωρίς φόρτο ή βρίσκεται σε αδράνεια
+                    </p>
+
+                    <a href="https://www.nvidia.com/en-gb/"> Manufacturer's site </a>
+                </section>
 
             <section class="product-features">
                 <h3> Χαρακτηριστικά </h3>
