--- a/Ask3/index.html
+++ b/Ask3/index.html
@@ -30,15 +30,16 @@
         </header>
 
 
-        <main id="welcome-text">
+        <main id="welcome-page">
 
-            <h2>Καλώς ήρθατε στην ιστοσελίδα του ηλεκτρονικού μας καταστήματος, Take A Byte!</h2>
-            <p>Στο κατάστημά μας μπορείτε να βρείτε όλα τα είδη τεχνολογίας που χρειάζεστε, από κινητά τηλέφωνα και laptops, μέχρι πλυντήρια και καφετιέρες!</p>
-
-            <h3>Σχετικά με εμάς</h3>
-            <p>Το κατάστημά μας ξεκίνησε να δραστηριοποιείται στον χώρο της τεχνολογίας το 2022. Διαθέτει ευρεία γκάμα προϊόντων τεχνολογίας, 
-                κινητά τηλέφωνα, υπολογιστές και εξαρτήματα, περιφερειακά, οικιακές συσκευές και άλλα.</p>
-            <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
+            <article id="welcome-text">
+                <h2>Καλώς ήρθατε στην ιστοσελίδα του ηλεκτρονικού μας καταστήματος, Take A Byte!</h2>
+                <p>Στο κατάστημά μας μπορείτε να βρείτε όλα τα είδη τεχνολογίας που χρειάζεστε, από κινητά τηλέφωνα και laptops, μέχρι πλυντήρια και καφετιέρες!</p>
+                <h3>Σχετικά με εμάς</h3>
+                <p>Το κατάστημά μας ξεκίνησε να δραστηριοποιείται στον χώρο της τεχνολογίας το 2022. Διαθέτει ευρεία γκάμα προϊόντων τεχνολογίας,
+                    κινητά τηλέφωνα, υπολογιστές και εξαρτήματα, περιφερειακά, οικιακές συσκευές και άλλα.</p>
+                <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
+            </article>
         
         </main>
 
