--- a/Ask3/product-categories.html
+++ b/Ask3/product-categories.html
@@ -104,7 +104,8 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/house.jpg">
+                        <li> 
+                            <img src ="../assets/house.jpg">
                             <h3>Οικιακές Συσκευές</h3>
                             <ul>
                                 <li> Θέρμανση & Κλιματισμός </li>
